--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -61,21 +61,19 @@
 
   <!-- Title paragraph -->
     <div class="l2 text-center mt-5">
-        This is title
+        One stop event hire
     </div>
-      <br>
+      <br><br>
       <div class="px-5 text-center s1">
-        From the smallest detail to the grandest event, Got It Covered can take care of all the details. With the
-        largest hire range in Nelson and Marlborough and with 13+ years experience our professional team of event
-        stylists and florists love helping create memorable events.
+        We have what you need for any occasion, wedding, birthday, corporate gathering, family reunion, or just an special girls night we cater for all events. 
+        We offer very competitive prices and high-quality rental equipment.<br><br>
+        Being a locally owned business, Luxe Dream Event Hire has everything you'll need for a great party. 
+        Our kid-friendly staff delivers to throughout Auckland. Our goal is to become your preferred event rental company. <br>
+        <a class="getintouch" style="color:#c48f45" href="" routerLink="/contactUs">Get in touch now for a quote</a> !
       </div>
-      <div class="px-5 my-5 text-center s1">
-        Whether you are planning a wedding, corporate event, birthday, bridal shower, engagement party, baby shower,
-        ball, anniversary or any kind of party, Got It Covered has an extensive range of hire items that cater to a
-        large range of styles and events.
-      </div>
+      <br>
       <div class="row"><div class="col-12 text-center s1">For more images of our work galleries</div></div>
-      <div class="row mb-5"><div class="col-12 text-center"><button type="button" class="btn btn-outline-gold my-4 lspace-3" [routerLink]="[ '/gallery']"> View Our Works</button></div></div>
+      <div class="row mb-5"><div class="col-12 text-center"><button type="button" class="btn btn-outline-gold my-4 lspace-3" [routerLink]="[ '/galleries']"> View Our Gallery</button></div></div>
 
       <!-- styling -->
       <div class="row">
@@ -85,12 +83,12 @@
             </div>
           <div class="col-12 col-md-6">
             <div class="d-none d-md-block"><br><br></div>
-            <div class="l2 mt-5 lspace-5">Styling</div>
+            <div class="l2 mt-5 lspace-5">Our event services</div>
             <div class="my-3 s2">Want a Pinterest worthy event but just not sure where to start or how to bring all the
               elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible
               events that inspire and excite!
             </div>
-            <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" [routerLink]="[ '/hire']">View our products</button>
+            <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" [routerLink]="[ '/services']">View our services</button>
           </div>
         </div>
     
@@ -98,13 +96,13 @@
         <div class="row mt-5">
             <div class="col-12 col-md-6 pt-md-4 order-1 order-md-0">
             <div class="d-none d-md-block"><br><br></div>
-              <div class="l2 mt-5 lspace-5">Events</div>
+              <div class="l2 mt-5 lspace-5">Our event packages</div>
               <div class="my-3 s2">So you are planning a corporate event and need help with the styling and theming? Let us help
                 you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the
                 grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough
                 region since 2005 with an established reputation for excellence.
               </div>
-              <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" [routerLink]="[ '/hire']">View our products</button>
+              <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" [routerLink]="[ '/packages']">View our packages</button>
             </div>
             <!-- <div class="col-12 col-md-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "class=" d-block ml-auto " style="position: absolute;
               clip: rect(0px,auto,500px,0px);"></div> -->
