--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -1,4 +1,9 @@
+<div class=" collapse dual-collapse2">
+    <i class="fas fa-shopping-cart"></i>
+</div>
+
 <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom p-0 lspace-3">
+    
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item pl-md-5">
