--- a/src/app/fcomponents/pages/faq/faq.component.html
+++ b/src/app/fcomponents/pages/faq/faq.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="px-0 px-md-5 mx-2">
-  <div class="row l1 text-center"><div class="col-12 my-2 my-md-5">FAQ</div></div>
+  <div class="row l1 text-center"><div class="col-12 my-2 my-md-5">Frequently asked questions</div></div>
   <div id="panel panel-default">
       <div class="card" *ngFor='let question of questions; index as i'>
         <div class="card-header">
