--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -21,10 +21,11 @@
           </div>
         </div>
     </div>
-
-
-  <div class="row"><div class="col-12 col-md-6 s2bold" *ngIf="!allProducts || allProducts.length ==0">Sorry, We can not find any products at this moment.</div></div>
-
+    <br><br>
+    <div class="s2" style="text-align: center;" *ngIf="errorMessage">
+      Sorry, {{errorMessage}}
+    </div>
+    <br>
   <!-- display products -->
   <div class="row py-3">
     <div class='col-12 col-md-4 pt-4 pb-2' *ngFor="let product of allProducts; index as i">
