--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -44,7 +44,7 @@
       <div class="row justify-content-end py-3">
           <div class="col-8 py-2"><a class='s2gold' [routerLink]="['/']"><i class="fas fa-arrow-left"></i>&nbsp; Continue Shopping</a> </div>
           <div class="col-2 py-2 text-right">Total Price: <span class="s2bold">$1230</span></div>
-          <div class="col-2 text-center"><button class="btn btn-outline-gold" routerLink = '/userInfo'>Submit cart</button></div>
+          <div class="col-2 text-center"><button class="btn btn-outline-gold" routerLink = '/userInfo' (click)="submitCart()">Submit cart</button></div>
       </div>
 </div>
 </div>
