--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -39,23 +39,18 @@
       </div>
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
         <ul><span class="s1 text-white">Contact us</span>
-          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><div class="row">
-            <div class="col-2"><i class="fas fa-phone-volume mr-3"></i></div><div class="col-10">02108547654</div></div>
+          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
+              <a href="tel:642108547654" style=""><i class="fas fa-phone-volume mr-3"></i> &nbsp; (64)2108547654</a>
           </li>
-
-          <li class="mt-2 text-decoration-underline text-white-50">
-              <div class="row"><div class="col-2"><i class="far fa-envelope mr-3"></i></div><div class="col-10">luxedreameventhire@gmail.com</div></div>
-           </li>
-
-          <li class="mt-2 text-decoration-underline text-white-50">
-            <div class="row"><div class="col-2"><i class="fas fa-map-marker-alt mr-3"></i></div><div class="col-10">19 Hillside Rd, Wairau Valley, Auckland 0627</div></div>
-            </li>
-
-          <li class="mt-2 text-decoration-underline text-white-50">
-            <div class="row"><div class="col-2"><i class="fab fa-weixin mr-3"></i></div><div class="col-10">Wechat: LuxeDreamEventHire</div></div>
+          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
+              <a href="mailto:luxedreameventhire@gmail.com" style=""><i class="far fa-envelope mr-3"></i> &nbsp; luxedreameventhire@gmail.com</a>
           </li>
-
-
+          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
+              <a href="email:luxedreameventhire@gmail.com" style=""><i class="fas fa-map-marker-alt mr-3"></i> &nbsp; 19 Hillside Rd, Wairau Valley, Auckland 0627</a>
+          </li>
+          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
+              <a href="email:luxedreameventhire@gmail.com" style=""><i class="fab fa-weixin mr-3"></i> &nbsp; Wechat: LuxeDreamEventHire</a>
+          </li>
         </ul>
       </div>
     </div>
