--- a/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
+++ b/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
@@ -2,10 +2,7 @@
   <div class=" px-0 px-md-5 mx-2">
     <div class="row text-center l1"><div class="col-12 my-2 my-md-5">About Us</div></div>
     <div class="s2">
-      Here at The Big Letter Co. we add that much needed sparkle to your party or event. 
-      Our stunning illuminated letters will bring a unique flair that will look fabulous in 
-      pictures and stay etched in people’s minds for a long time to come.
-    </div>
+      Good things always bring happiness to people. Exquisite decorations and elaborate designs makes a monumental differece from what may otherwise seem ordinary.    </div>
     <br>
     <div class="s2">
       We take pride in what we do and want to get it just right. We will work closely with you, 
