--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -13,10 +13,10 @@
       </div>
     </div>
       <!-- imgs -->
-    <div class="row  mx-0 mx-md-5">
-      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg1.jpg" alt=""></div>
-      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg2.jpg" alt=""></div>
-      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg3.jpg" alt=""></div>
+    <div class="row mx-0 mx-md-5">
+      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg1.jpg" alt=""></div>
+      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg2.jpg" alt=""></div>
+      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg3.jpg" alt=""></div>
       <!-- <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div> -->
     </div>
 
@@ -55,8 +55,9 @@
       </div>
     </div>
     <!-- copyright -->
-    <div class="row py-2">
-      <div class="col-12"><div class="s2gold text-center ">&copy; Lux Dream Event Hire 2019</div></div>
+    <div class=" ">
+      <div class="s2gold text-center ">&copy; Luxe Dream Event Hire 2019</div> 
+      <div class="s2 text-center">Built by Spiritx</div>
     </div>
     
   </div>
