--- a/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
+++ b/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
@@ -1,41 +1,30 @@
-  <div class="container-fluid">
+  <div class="container">
   <div class=" px-0 px-md-5 mx-2">
     <div class="row text-center l1"><div class="col-12 my-2 my-md-5">About Us</div></div>
-    <div class="s2">
-      Good things always bring happiness to people. Exquisite decorations and elaborate designs makes a monumental differece from what may otherwise seem ordinary.    </div>
+    <div style="text-align: center;" class="s2">
+      Good things always bring happiness to people. <br>
+      Luxe Dream Event Hire is dedicated in brining exquisite decorations and elaborate designs that will make a monumental differece from what may otherwise seem ordinary.   
     <br>
-    <div class="s2">
-      We take pride in what we do and want to get it just right. We will work closely with you, 
-      your event organiser, your florist and even your stylist if you want us to. We are dedicated  
-      and will work tirelessly to create your vision and make your illuminated masterpiece come to life.
-    </div>
-    <br>
-    <div style="margin: 2.5rem 0;">
-      <hr>
-    </div>
-    <div class="row">
-      <div class="col-md-8" >
-          <i class="fa fa-star" style="color:#b2823f;font-size: 40px;"><a class="l1" style="color:black;padding-left: 20px;">Our Service</a></i>
-          <br><br>
-          <ul>
-            <li><div class="s2">We offer a large range of freestanding illuminated letters, numbers, giant words and light boxes suited specifically to your event.</div></li>
-            <li><div class="s2">We can deliver anywhere across Melbourne and set things up, well in time for your party to kick off – just let us know details and we will make it happen.</div></li>
-            <li><div class="s2">We will liaise directly with your venue or event manager to arrange setup times and logistics.</div></li>
-            <li><div class="s2">Call us for a free consultation about your requirements, or just for some inspiration – we are always happy to discuss ideas with you.</div></li>
-            <li><div class="s2">Do you need something different to what you have seen on our website? Just ask us. We are always striving to meet our customer’s needs, and will do everything possible to make sure you get what you want.</div></li>
-          </ul>
-          <br>
-          <div class="s2">To avoid disappointment, please make sure you contact us at least one month in advance for your letter requirements.</div>
-          <br>
-          <div class="s2">Whether your party is a huge corporate event or small private party, The Big Letter Co. guarantees you will get the same five star service. Every customer is a star to us, and deserves to have their event sparkle with our unique illuminated letters.</div>
-          <br>
-        </div>
+      From birthday parties to bachelor & bachelorette parties and even weekend parties, the distance between people is getting closer and closer in a perfectly arranged atmosphere. 
+      Even the occasional DIY will make things different and fun. 
+      <br><br>
+      Life should be spent on good things. We want to be there and go through the good times in life with you. 
+      We founded Luxe Dream Event Hire as a local New Zealand business, for wedding companies, wedding halls, studios, 
+      planners and the photographer, as an one-stop shop props rental service. 
+      <br>
+      We want to build an event props warehouse, where customers can select the most exquisite props of quality and taste, for every gorgeous presentation. 
+      <br><br>
+      We have professional design consultants who specialises in event design plans.<br>
+      Helping you choose and match all kinds of props and create a beautiful atmosphere for your event.
+      <br><br>
 
-      <div class="col-md-4 pt-5 mt-4">
-          <img class="about-us-side-image" src="../../../../assets/images/about-us.jpg" >
-          <br>
-          <br>
-      </div>
+      Our service has interactive booking, online management, and delivery to your event location. <br>
+      We will always be committed to being the creator of your most beautiful moments, adding to your perfect and exquisite life, 
+      awakening your vision and expectation, and rejuvenating the unprecedented power.
+      <br><br><br>
+      <button type="button" class="btn btn-outline-gold lspace-3" [routerLink]="[ '/hire']">View our products</button>
     </div>
+    <br>
+    <br><br>
   </div>
 </div>
