--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -33,7 +33,7 @@
 <div class="px-0 px-md-5 mx-2">
     <!-- hireCollection -->
 <div class="hireCollection">
-    <div class="text-center my-5 l2 lspace-3">Hire Specials</div>
+    <h1 class="text-center my-5 l2 lspace-3">Event Hire Specials</h1>
     <div class="row">
       <div class="col-6 col-md-3 "><img src="../../../../assets/images/homep4.jpg" class="img100">
         <div class="s1">Oblong Trestle Tables</div>
@@ -61,7 +61,7 @@
 
   <!-- Title paragraph -->
     <h1 class="l2 text-center mt-5">
-        One stop event hire
+        One stop event hire shop
     </h1>
       <br><br>
       <div class="px-5 text-center s1">
@@ -113,8 +113,8 @@
         <!-- scrolling background -->
         <div class="row">
         <div class="col-12 bgat mt-5" #bgat >
-            <div id="carouselExampleSlidesOnly" class="carousel slide" style="height:260px;" data-ride="carousel">
-                <div class="carousel-inner text-center text-white"><br><br><br>
+            <div id="carouselExampleSlidesOnly" class="carousel slide" style="height:300px;" data-ride="carousel">
+                <div class="container carousel-inner text-center text-white"><br><br><br>
                   <div class="carousel-item active">
                     <h5>Sarah</h5>
                     <p style="color:white" class="s1">"Not only are the pieces completely unique and always a focal point at wedding receptions, but the team at Lux Dream are the absolute best to work with. They always deliver and pick up promptly on the day of the event. Emma helps immensely with pre-planning leading up to the event. She’s prompt at making revisions to orders and sending over invoices efficiently."
