--- a/src/app/fcomponents/gallery-list/gallery-list.component.css
+++ b/src/app/fcomponents/gallery-list/gallery-list.component.css
@@ -1,12 +1,9 @@
-.egbg{
+/* .egbg{
     background-image: url("../../../assets/images/productImg2.jpeg");
     background-repeat: no-repeat;
     background-size: fixed;
     background-position: center;
-}
-.h480{
-    height:500px;
-}
+} */
 .gallaryBlocks{
     /* background-image: url("../../../assets/images/productImg2.jpeg"); */
     width: 100%;
