--- a/src/app/fcomponents/products/productList/productList.component.css
+++ b/src/app/fcomponents/products/productList/productList.component.css
@@ -41,3 +41,11 @@ a.dropdown-item:hover{
 .show .btn-secondary.dropdown-toggle{
     color:black;
 }
+.h480{
+    height:480px;
+}
+@media (max-width:767px){
+    .h480{
+        height:300px;
+    }
+}
