--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -33,15 +33,15 @@
             <a [routerLink] = "['/product/',product.prodId]">
             <div class="carousel-inner" >
                 <!-- active -->
-              <div class="carousel-item active">
-                <img src="../../../../assets/images/productImg1.jpeg" class="d-block w-100">
+              <div class="carousel-item active " *ngFor="let media of product.productMedia">
+                <img src="../../../../assets/Products/{{media.url}}.jpg" class="d-block w-100 h480">
               </div>
-              <div class="carousel-item">
+              <!-- <div class="carousel-item">
                 <img src="../../../../assets/images/productImg2.jpeg" class="d-block w-100">
               </div>
               <div class="carousel-item">
                 <img src="../../../../assets/images/productImg3.png" class="d-block w-100">
-              </div>
+              </div> -->
             </div>
             </a>
             <a class="carousel-control-prev" href="#carouselExampleFade{{i}}" role="button" data-slide="prev">
