shopping cart update

--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -3,7 +3,8 @@
   <div class="row mt-5"><div class="col-12 s2goldbold"><a (click)="backClicked()"> Dinnerware and Glassware </a> / Golden Glassline Plate</div></div>
   <div class="row my-5">
   <div class="col-12 col-md-6 col-lg-6 p-0">
-    <div (mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()" (mousemove)="mouseMove($event)">
+    <!-- <div (mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()" (mousemove)="mouseMove($event)"> -->
+    <div>
         <img src="../../../../assets/Products/{{prodMediaUrl}}.jpg" class="d-block w-100" id="small" #small style="height:500px;">
         <!-- <b id="shadow" #shadow></b> -->
     </div>
